CDR-2274 - review (expand language support test for 532)